[package]
name = "oclsp"
version = "0.1.0"
authors = ["Lukas Werling <lukas@lwrl.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
env_logger = "0.7.1"
libc = "0.2.66"
log = "0.4.8"
lsp-server = "0.3.1"
lsp-types = { version = "0.68.1", features = ["proposed"] }
serde = "1.0.104"
serde_json = "1.0.44"
regex = "1.3"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
glob = "0.3"
regex = "1.3"
